# prompt-security-testing

./: Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: linter.yml
src/: attack_loader.py  config.py  main.py  prompt_injection_detector.py  prompt_injection_tester.py  prompt_to_test_loader.py  result_formatter.py  runner.py
src/attacks/business_integrity/: admin_privilege_escalation.yaml  confidential_roadmap.yaml  discount_code_exploit.yaml  unauthorized_refund.yaml
src/attacks/data_exfiltration/: README.md  api_enumeration.yaml  data_exfiltration_base64.yaml  data_exfiltration_mime.yaml  data_exfiltration_quoted-printable.yaml  tool_enumeration.yaml
src/attacks/distraction/: README.md  cognitive_overload.yaml  contradiction.yaml  denial_of_service.yaml  inversion.yaml  long_prompt-1.yaml  long_prompt-2.yaml  long_prompt-3.yaml  long_prompt-4.yaml  long_prompt-5.yaml  long_prompt_1.yaml  long_prompt_2.yaml  long_prompt_3.yaml  long_prompt_4.yaml  long_prompt_5.yaml  long_prompt_advanced.yaml  long_prompt_basic.yaml  long_prompt_complex.yaml  long_prompt_intermediate.yaml  long_prompt_sophisticated.yaml  rule_addition.yaml  think_prompt.yaml  think_prompt_rag.yaml
src/attacks/harmful/: README.md  bias_elicitation.yaml  harm_discussion_bypass.yaml  hate_speech-1.yaml  hate_speech-2.yaml  hate_speech-3.yaml  hitler.yaml  (+25 more)
src/helpers/: bedrock_client.py  bedrock_client_converse.py  bedrock_client_invoke.py  llm_client.py  llm_client_factory.py
src/subset_attacks/: ka_injection_image.yaml
tests/: test_attack_loader.py  test_llm_client_factory.py  test_llm_client_interface.py  test_prompt_injection_detector.py  test_prompt_to_test_loader.py  test_runner.py
tests/test_attacks/: injection_attack.yaml  safe_prompt.yaml  unicode_attack.yaml  valid_attack.yaml
use_cases/default/: prompt_to_test.yaml
use_cases/eferro_custom_gpt/: prompt_to_test.yaml
use_cases/optimice_eferro_custom_gpt/: prompt_to_test.yaml
use_cases/proseller-agent/: novelista.yaml  prompt_to_test.yaml
(+195 files in other folders)
